--- a/public/service/index.html
+++ b/public/service/index.html
@@ -167,7 +167,7 @@
 <h3 id="amases">AMASES</h3>
 <p><a href="https://www.amases.org" target="_blank">Homepage</a></p>
 <h3 id="university-of-trento">University of Trento</h3>
-<p><a href="https://www.unitn.it/ateneo/129/nucleo-di-valutazione" target="_blank">Nucleo</a></p>
+<p><a href="https://webapps.unitn.it/du/it/OrganoIstituzionale/ORI0000005/Persone" target="_blank">Nucleo di Valutazione</a></p>
 <h3 id="scuola-superiore-meridionale">Scuola Superiore Meridionale</h3>
 <p><a href="https://www.ssmeridionale.it" target="_blank">Homepage</a></p>
 <h3 id="mathematical-reviews">Mathematical Reviews</h3>
