--- a/public/research/index.html
+++ b/public/research/index.html
@@ -180,7 +180,7 @@
 <h3 id="upcoming-conferences">Upcoming conferences</h3>
 <ul>
 <li>
-<p>Amases XLIX, Florence, 11-13 September 2025</p>
+<p><a href="https://saet.uiowa.edu/2025-conference/" target="_blank">Amases XLIX, Florence, 11-13 September 2025</p>
 </li>
 <li>
 <p><a href="https://saet.uiowa.edu/2025-conference/" target="_blank">2025 SAET</a>, Milan, 28-30 May 2025</p>
